# itzti-hardware-controller

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: adc_driver.rs  audio_engine.rs  closed_loop.rs  commands.rs  i2c_driver.rs  main.rs  safe_mode_defaults.rs  serial_port.rs  session_db.rs  spi_driver.rs  watchdog.rs
src/__tests__/: alert-log-panels.test.tsx  app.test.tsx  auth-gate.test.tsx  auth-store.test.ts  clamping.property.test.ts  command-construction.property.test.ts  csv-export.property.test.ts  csv-export.test.ts  dashboard.test.tsx  device-list.test.tsx  device-store.test.ts  environment.property.test.ts  environment.test.ts  hardware-bridge.test.ts  i2c-spi-integration.property.test.ts  i2c-spi-serialization.property.test.ts  i2c-spi-validation.property.test.ts  integration-user-roles.test.tsx  invalid-data.property.test.ts  knob-slider-controls.test.tsx  layout-persistence.property.test.ts  logout-reset.property.test.ts  metrics.property.test.ts  pin-change.property.test.ts  pin-dialog.test.tsx  pin-format-validation.property.test.ts  pin-hash-roundtrip.property.test.ts  pin-hash.test.ts  preset-duplicate-names.property.test.ts  preset-editor.test.tsx  preset-serialization-roundtrip.property.test.ts  preset-serializer.test.ts  preset-store.test.ts  preset-validation.property.test.ts  pretty-print.property.test.ts  realtime-chart.test.tsx  role-visibility.property.test.ts  sample-rate.property.test.ts  serialization.property.test.ts  (+9 more)
(+65 files in other folders)
