[package]
name = "tauri-hardware-controller"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
i2cdev = "0.6"
spidev = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
rodio = "0.19"
